DDF-3441 support ui color configuration

--- a/catalog/ui/search-ui-app/src/main/resources/etc/org.codice.ddf.catalog.ui.config.config
+++ b/catalog/ui/search-ui-app/src/main/resources/etc/org.codice.ddf.catalog.ui.config.config
@@ -61,3 +61,14 @@ uiName="Intrigue"
 showRelevanceScores=B"false"
 relevancePrecision=I"5"
 showLogo=B"false"
+
+backgroundColor="#424249"
+textColor="contrast(@fortyGrey)"
+buttonTextColor="white"
+primaryColor="#3c6dd5"
+positiveColor="#428442"
+negativeColor="#8a423c"
+warningColor="#c89600"
+favoriteColor="#d1d179"
+linksVisitedColor="#9874e4"
+linksColor="@primary-color"
