--- a/catalog/ui/catalog-ui-search/package.json
+++ b/catalog/ui/catalog-ui-search/package.json
@@ -89,8 +89,8 @@
     "jquery-ui": "1.12.1",
     "less-vars-to-js": "1.1.2",
     "lodash": "4.17.4",
-    "moment": "2.18.1",
     "lodash.get": "4.4.2",
+    "moment": "2.18.1",
     "mt-geo": "1.0.1",
     "openlayers": "3.20.1",
     "plotly.js": "1.10.5",
@@ -109,6 +109,7 @@
     "uuid": "2.0.2",
     "vis": "4.15.0",
     "wellknown": "https://github.com/connexta/wellknown.git#4d9ae612e7e308509ec76400b258c9db1581ea82",
-    "wkx": "0.4.1"
+    "wkx": "0.4.1",
+    "worker-loader": "^1.1.0"
   }
 }
