--- a/catalog/ui/catalog-ui-search/package.json
+++ b/catalog/ui/catalog-ui-search/package.json
@@ -89,8 +89,8 @@
     "jquery-ui": "1.12.1",
     "less-vars-to-js": "1.1.2",
     "lodash": "4.17.4",
-    "moment": "2.18.1",
     "lodash.get": "4.4.2",
+    "moment": "2.18.1",
     "mt-geo": "1.0.1",
     "openlayers": "3.20.1",
     "plotly.js": "1.10.5",
@@ -103,6 +103,7 @@
     "redux-thunk": "2.1.0",
     "select2": "4.0.3",
     "sortablejs": "1.4.2",
+    "spectrum-colorpicker": "1.8.0",
     "terraformer": "1.0.5",
     "terraformer-wkt-parser": "1.1.0",
     "usng.js": "https://github.com/codice/usng.js#b756a1dddd6292d7af44db363131d848a87a2be2",
