--- a/catalog/ui/catalog-ui-search/package.json
+++ b/catalog/ui/catalog-ui-search/package.json
@@ -21,6 +21,10 @@
     "node": ">=0.10.5"
   },
   "devDependencies": {
+    "@types/backbone": "1.3.41",
+    "@types/backbone-associations": "0.6.31",
+    "@types/backbone.marionette": "3.3.2",
+    "@types/openlayers": "4.3.11",
     "babel-core": "6.22.1",
     "babel-loader": "6.2.4",
     "babel-plugin-istanbul": "4.0.0",
@@ -60,10 +64,14 @@
     "sinon": "1.17.3",
     "squirejs": "0.2.1",
     "stack-source-map": "1.0.5",
+    "ts-loader": "3.1.1",
+    "tslint": "5.8.0",
+    "typescript": "2.6.1",
     "url-loader": "0.5.8",
     "webpack": "codice/webpack#v1.13.0-hotReloadJSDisabled",
     "webpack-dev-server": "1.16.3",
-    "webpack-merge": "0.14.0"
+    "webpack-merge": "0.14.0",
+    "worker-loader": "1.1.0"
   },
   "dependencies": {
     "@turf/circle": "3.3.3",
