DDF-3628 Uses jsonrpc for query responses

--- a/catalog/ui/catalog-ui-search/package.json
+++ b/catalog/ui/catalog-ui-search/package.json
@@ -110,6 +110,7 @@
     "react-redux": "4.4.5",
     "redux": "3.5.2",
     "redux-thunk": "2.1.0",
+    "rpc-websockets": "4.0.0",
     "sanitize-html": "1.15.0",
     "select2": "4.0.3",
     "sortablejs": "1.4.2",
