--- a/platform/action/core/platform-action-core-impl/pom.xml
+++ b/platform/action/core/platform-action-core-impl/pom.xml
@@ -27,6 +27,7 @@
         <dependency>
             <groupId>ddf.action.core</groupId>
             <artifactId>action-core-api</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
     <build>
