--- a/ui/packages/catalog-ui-search/package.json
+++ b/ui/packages/catalog-ui-search/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ddf-ui",
+  "name": "catalog-ui-search",
   "author": "Codice",
-  "description": "Frontend packages for DDF",
+  "description": "A frontend UI for DDF Catalog",
   "version": "0.0.1",
   "license": "LGPL-3.0",
   "scripts": {
