DDF-3741 Fix sort persistence

--- a/catalog/ui/search-ui-app/src/main/resources/etc/org.codice.ddf.catalog.ui.config.config
+++ b/catalog/ui/search-ui-app/src/main/resources/etc/org.codice.ddf.catalog.ui.config.config
@@ -45,8 +45,7 @@ scheduleFrequencyList=L[ \
   "86400", \
   ]
 hiddenAttributes=[ \
-  "^sortOrder$", \
-  "^sortField$", \
+  "^sorts$", \
   "^cql$", \
   "^polling$", \
   "^cached$", \
