--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -211,6 +211,11 @@
                         </artifactItem>
                         <artifactItem>
                             <groupId>org.webjars.bower</groupId>
+                            <artifactId>moment-timezone</artifactId>
+                            <version>0.4.1</version>
+                        </artifactItem>
+                        <artifactItem>
+                            <groupId>org.webjars.bower</groupId>
                             <artifactId>perfect-scrollbar</artifactId>
                             <version>0.7.0</version>
                         </artifactItem>
