--- a/ui/packages/catalog-ui-search/package.json
+++ b/ui/packages/catalog-ui-search/package.json
@@ -42,6 +42,7 @@
     "backbone.modelbinder": "1.1.0",
     "backbone.paginator": "2.0.5",
     "bootstrap": "3.3.7",
+    "brace": "0.11.1",
     "cesium": "1.44",
     "clipboard": "1.7.1",
     "codice-icons": "*",
@@ -54,6 +55,7 @@
     "jquery": "3.2.1",
     "jquery-ui": "1.12.1",
     "jquery-ui-multiselect-widget": "1.17.0",
+    "js-beautify": "1.7.5",
     "less-vars-to-js": "1.1.2",
     "lodash": "4.17.4",
     "lodash.get": "4.4.2",
@@ -64,6 +66,7 @@
     "plotly.js": "1.10.5",
     "q": "1.5.0",
     "react": "15.2.1",
+    "react-ace": "6.1.3",
     "react-dom": "15.2.1",
     "react-redux": "4.4.5",
     "redux": "3.5.2",
