--- a/ui/packages/catalog-ui-search/package.json
+++ b/ui/packages/catalog-ui-search/package.json
@@ -26,8 +26,11 @@
     "@types/backbone.marionette": "3.3.2",
     "@types/openlayers": "4.3.11",
     "ace": "*",
+    "brace": "0.11.1",
     "chai": "4.1.1",
+    "js-beautify": "1.7.5",
     "loader-utils": "1.1.0",
+    "react-ace": "6.1.3",
     "react-addons-test-utils": "15.2.1",
     "sinon": "5.0.7"
   },
