--- a/ui/packages/ace/package.json
+++ b/ui/packages/ace/package.json
@@ -66,6 +66,7 @@
     "webpack-bundle-analyzer": "2.13.1",
     "webpack-dev-server": "3.1.1",
     "webpack-merge": "4.1.2",
+    "webpack-node-externals": "1.7.1",
     "whatwg-fetch": "2.0.4",
     "worker-loader": "1.1.1"
   },
