--- a/ui/packages/catalog-ui-search/package.json
+++ b/ui/packages/catalog-ui-search/package.json
@@ -31,6 +31,7 @@
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
     "js-beautify": "1.7.5",
+    "jsdom": "11.12.0",
     "loader-utils": "1.1.0",
     "react-ace": "6.1.3",
     "sinon": "5.0.7"
@@ -78,6 +79,7 @@
     "select2": "4.0.3",
     "sortablejs": "1.4.2",
     "spectrum-colorpicker": "1.8.0",
+    "styled-components": "3.3.3",
     "terraformer": "1.0.5",
     "terraformer-wkt-parser": "1.1.0",
     "urijs": "1.19.1",
