--- a/ui/packages/catalog-ui-search/package.json
+++ b/ui/packages/catalog-ui-search/package.json
@@ -70,6 +70,7 @@
     "mt-geo": "1.0.1",
     "openlayers": "4.6.5",
     "plotly.js": "1.10.5",
+    "polished": "1.9.3",
     "q": "1.5.0",
     "react": "16.4.1",
     "react-dom": "16.4.1",
