--- a/ui/packages/catalog-ui-search/tsconfig.json
+++ b/ui/packages/catalog-ui-search/tsconfig.json
@@ -1,6 +1,13 @@
 {
     "compilerOptions": {
+        "jsx": "react",
+        "allowJs": true,
+        "sourceMap": true
     },
+    "include": [
+        "**/*.ts",
+        "**/*.tsx"
+    ],
     "exclude": [
         "node_modules"
     ]
