--- a/ui/packages/ace/package.json
+++ b/ui/packages/ace/package.json
@@ -57,7 +57,7 @@
     "script-loader": "0.7.2",
     "simple-progress-webpack-plugin": "1.1.2",
     "style-loader": "0.20.3",
-    "ts-loader": "4.1.0",
+    "ts-loader": "4.4.2",
     "typescript": "2.8.1",
     "url-loader": "1.0.1",
     "username": "3.0.0",
@@ -72,6 +72,7 @@
   },
   "devDependencies": {
     "eslint-plugin-codice-linter": "*",
-    "standard": "8.6.0"
+    "standard": "8.6.0",
+    "typescript": "3.0.1"
   }
 }
