--- a/ui/packages/ace/package.json
+++ b/ui/packages/ace/package.json
@@ -71,6 +71,7 @@
     "worker-loader": "1.1.1"
   },
   "devDependencies": {
+    "@types/webpack-env": "1.13.6",
     "eslint-plugin-codice-linter": "*",
     "standard": "8.6.0",
     "typescript": "3.0.1"
