--- a/ui/packages/catalog-ui-search/package.json
+++ b/ui/packages/catalog-ui-search/package.json
@@ -74,6 +74,7 @@
     "q": "1.5.0",
     "react": "16.4.1",
     "react-dom": "16.4.1",
+    "react-live": "1.11.0",
     "react-redux": "5.0.7",
     "redux": "3.5.2",
     "redux-thunk": "2.1.0",
