--- a/ui/packages/catalog-ui-search/package.json
+++ b/ui/packages/catalog-ui-search/package.json
@@ -27,6 +27,7 @@
     "@types/backbone-associations": "0.6.31",
     "@types/backbone.marionette": "3.3.2",
     "@types/openlayers": "4.3.11",
+    "@types/react": "16.4.11",
     "ace": "*",
     "brace": "0.11.1",
     "chai": "4.1.1",
@@ -36,7 +37,8 @@
     "jsdom": "11.12.0",
     "loader-utils": "1.1.0",
     "react-ace": "6.1.3",
-    "sinon": "5.0.7"
+    "sinon": "5.0.7",
+    "typescript": "3.0.1"
   },
   "dependencies": {
     "@turf/circle": "3.3.3",
@@ -83,7 +85,7 @@
     "select2": "4.0.3",
     "sortablejs": "1.4.2",
     "spectrum-colorpicker": "1.8.0",
-    "styled-components": "3.3.3",
+    "styled-components": "3.4.2",
     "terraformer": "1.0.5",
     "terraformer-wkt-parser": "1.1.0",
     "urijs": "1.19.1",
