--- a/ui/packages/catalog-ui-search/tsconfig.json
+++ b/ui/packages/catalog-ui-search/tsconfig.json
@@ -2,7 +2,8 @@
     "compilerOptions": {
         "jsx": "react",
         "allowJs": true,
-        "sourceMap": true
+        "sourceMap": true,
+        "noImplicitAny": true
     },
     "include": [
         "**/*.ts",
