--- a/ui/packages/catalog-ui-search/tsconfig.json
+++ b/ui/packages/catalog-ui-search/tsconfig.json
@@ -1,9 +1,13 @@
 {
     "compilerOptions": {
-        "jsx": "react",
+        "jsx": "preserve",
         "allowJs": true,
         "sourceMap": true,
-        "noImplicitAny": true
+        "noImplicitAny": true,
+        "noImplicitThis": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "strictNullChecks": true
     },
     "include": [
         "**/*.ts",
