--- a/ui/packages/catalog-ui-search/package.json
+++ b/ui/packages/catalog-ui-search/package.json
@@ -26,6 +26,7 @@
     "@types/backbone": "1.3.41",
     "@types/backbone-associations": "0.6.31",
     "@types/backbone.marionette": "3.3.2",
+    "@types/lodash": "4.14.116",
     "@types/openlayers": "4.3.11",
     "@types/react": "16.4.11",
     "ace": "*",
