--- a/ui/packages/catalog-ui-search/package.json
+++ b/ui/packages/catalog-ui-search/package.json
@@ -28,8 +28,10 @@
     "@types/backbone-associations": "0.6.31",
     "@types/backbone.marionette": "3.3.2",
     "@types/lodash": "4.14.116",
+    "@types/lodash.assign": "4.2.4",
     "@types/openlayers": "4.3.11",
     "@types/react": "16.4.11",
+    "@types/react-redux": "6.0.6",
     "ace": "*",
     "brace": "0.11.1",
     "chai": "4.1.1",
@@ -39,6 +41,7 @@
     "jsdom": "11.12.0",
     "loader-utils": "1.1.0",
     "react-ace": "6.1.3",
+    "redux-devtools-extension": "2.13.5",
     "sinon": "5.0.7",
     "stylelint": "9.5.0",
     "stylelint-config-recommended": "2.1.0",
@@ -73,6 +76,7 @@
     "jquery-ui-multiselect-widget": "1.17.0",
     "less-vars-to-js": "1.1.2",
     "lodash": "4.17.4",
+    "lodash.assign": "4.2.0",
     "lodash.get": "4.4.2",
     "moment": "2.22.0",
     "moment-timezone": "0.5.16",
@@ -86,7 +90,7 @@
     "react-live": "1.11.0",
     "react-redux": "5.0.7",
     "react-text-mask": "5.4.1",
-    "redux": "3.5.2",
+    "redux": "4.0.0",
     "redux-thunk": "2.1.0",
     "rpc-websockets": "4.0.0",
     "sanitize-html": "1.15.0",
