--- a/ui/packages/catalog-ui-search/package.json
+++ b/ui/packages/catalog-ui-search/package.json
@@ -29,6 +29,7 @@
     "@types/backbone.marionette": "3.3.2",
     "@types/lodash": "4.14.116",
     "@types/lodash.assign": "4.2.4",
+    "@types/lodash.isequal": "4.5.3",
     "@types/openlayers": "4.3.11",
     "@types/react": "16.4.11",
     "@types/react-redux": "6.0.6",
@@ -78,6 +79,7 @@
     "lodash": "4.17.4",
     "lodash.assign": "4.2.0",
     "lodash.get": "4.4.2",
+    "lodash.isequal": "4.5.0",
     "moment": "2.22.0",
     "moment-timezone": "0.5.16",
     "mt-geo": "1.0.1",
