--- a/ui/packages/catalog-ui-search/package.json
+++ b/ui/packages/catalog-ui-search/package.json
@@ -30,6 +30,7 @@
     "@types/lodash": "4.14.116",
     "@types/openlayers": "4.3.11",
     "@types/react": "16.4.11",
+    "@types/react-dom": "16.0.7",
     "ace": "*",
     "brace": "0.11.1",
     "chai": "4.1.1",
