--- a/ui/packages/catalog-ui-search/package.json
+++ b/ui/packages/catalog-ui-search/package.json
@@ -47,6 +47,7 @@
     "stylelint-processor-styled-components": "1.3.2"
   },
   "dependencies": {
+    "@material-ui/core": "3.6.1",
     "@turf/circle": "3.3.3",
     "@turf/meta": "3.13.0",
     "@turf/turf": "3.4.1",
