--- a/ui/packages/ace/package.json
+++ b/ui/packages/ace/package.json
@@ -36,6 +36,7 @@
     "glob": "7.1.2",
     "handlebars": "4.0.5",
     "handlebars-loader": "1.7.0",
+    "html-loader": "0.5.5",
     "html-webpack-plugin": "3.1.0",
     "imports-loader": "0.8.0",
     "less": "3.0.1",
