--- a/ui/packages/catalog-ui-search/package.json
+++ b/ui/packages/catalog-ui-search/package.json
@@ -34,6 +34,7 @@
     "sinon": "5.0.7"
   },
   "dependencies": {
+    "@connexta/atlas": "0.0.34",
     "@turf/circle": "3.3.3",
     "@turf/meta": "3.13.0",
     "@turf/turf": "3.4.1",
@@ -56,6 +57,8 @@
     "clipboard": "1.7.1",
     "@connexta/icons": "git://github.com/connexta/icons.git#v0.0.3",
     "content-disposition": "0.5.3",
+    "d3-time": "1.0.11",
+    "d3-time-format": "2.1.3",
     "density-clustering": "1.3.0",
     "dropzone": "4.3.0",
     "eonasdan-bootstrap-datetimepicker": "Eonasdan/bootstrap-datetimepicker#4.17.47",
