--- a/ui/packages/catalog-ui-search/package.json
+++ b/ui/packages/catalog-ui-search/package.json
@@ -7,11 +7,11 @@
   "scripts": {
     "fmt": "ace format -w",
     "prestart": "ace disable-idp",
-    "start": "node --max_old_space_size=8192 ../../node_modules/@connexta/ace/bin.js start",
+    "start": "node --max_old_space_size=8192 node_modules/@connexta/ace/bin.js start",
     "pretest": "ace bundle --env=test",
     "test": "ace test",
     "start:test": "ace start --env=test",
-    "build": "node --max_old_space_size=8192 ../../node_modules/@connexta/ace/bin.js bundle",
+    "build": "node --max_old_space_size=8192 node_modules/@connexta/ace/bin.js bundle",
     "postbuild": "ace package",
     "m2": "yarn install:m2",
     "install:m2": "ace clean && ace bundle && ace package && ace install"
@@ -24,14 +24,14 @@
     "node": ">=0.10.5"
   },
   "devDependencies": {
-    "@connexta/ace": "*",
+    "@connexta/ace": "git://github.com/connexta/ace.git#8fd0444ffc89e45a5b32e0013536d1f13480ffd0",
     "chai": "4.1.1",
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.5.0",
     "js-beautify": "1.8.7",
     "jsdom": "11.12.0",
     "loader-utils": "1.1.0",
-    "imperio": "*",
+    "imperio": "git://github.com/connexta/imperio.git#58f4aa7f9de999406e0d1f33ab88a83aef14935a",
     "sinon": "5.0.7"
   },
   "dependencies": {
@@ -40,7 +40,7 @@
     "@turf/circle": "3.3.3",
     "@turf/meta": "3.13.0",
     "@turf/turf": "3.4.1",
-    "@types/backbone": "1.3.41",
+    "@types/backbone": "1.3.47",
     "@types/backbone-associations": "0.6.31",
     "@types/backbone.marionette": "3.3.2",
     "@types/lodash": "4.14.120",
@@ -48,7 +48,7 @@
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
     "@types/react-intl": "2.3.12",
-    "backbone": "1.1.2",
+    "backbone": "1.3.3",
     "backbone-associations": "0.6.2",
     "backbone-poller": "1.1.3",
     "backbone.marionette": "2.4.7",
@@ -76,6 +76,7 @@
     "moment-timezone": "0.5.16",
     "mt-geo": "1.0.1",
     "openlayers": "4.6.5",
+    "paper-mache": "git://github.com/andrewkfiedler/paper-mache.git#35031b15ee53022ef7e7417dbe702e5b41b3bbc4",
     "plotly.js": "1.16.0",
     "polished": "1.9.3",
     "q": "1.5.0",
@@ -107,6 +108,10 @@
   "alias": {
     "Backbone.ModelBinder": "backbone.modelbinder/Backbone.ModelBinder",
     "cesium$": "cesium/Build/Cesium/Cesium.js"
+  },
+  "resolutions": {
+    "**/backbone": "1.3.3",
+    "**/jquery": "3.2.1"
   },
   "ace": {
     "files": [
