--- a/ui/packages/catalog-admin-module-maplayers/package.json
+++ b/ui/packages/catalog-admin-module-maplayers/package.json
@@ -57,7 +57,7 @@
     "istanbul": "0.4.5",
     "opn-cli": "3.1.0",
     "react-addons-test-utils": "15.4.2",
-    "@connexta/ace": "*"
+    "@connexta/ace": "git://github.com/connexta/ace.git#bd20be6b0fb3c8b2cdbc5a04cc8a66bf1b59861c"
   },
   "files": [
     "target/webapp",
