--- a/ui/package.json
+++ b/ui/package.json
@@ -13,8 +13,9 @@
     "fmt": "ace format -w --license ../LICENSE.md",
     "format": "ace format --license ../LICENSE.md",
     "posttest": "ace pom",
-    "prebuild": "ace clean --workspaces",
-    "build": "yarn format && ace set-env lerna run build",
+    "prebuild": "lerna run clean",
+    "build": "yarn format && lerna run build",
+    "postinstall": "lerna bootstrap && echo '\"yarn install\" in this directory only installs devDependencies for the project, did you mean to do it in \"packages/intrigue\"?'",
     "postbuild": "ace gen-feature --exclude catalog-ui-search-e2e && yarn run build-fonts",
     "build-fonts": "yarn run clean-fonts && yarn run copy-fonts && yarn run build-sass",
     "build-sass": "node-sass src/main/webapp/sass/ --output-style compressed -o src/main/resources/webapp/css/",
@@ -29,7 +30,7 @@
     "react-dom": "16.8.6"
   },
   "devDependencies": {
-    "@connexta/ace": "git://github.com/connexta/ace.git#248c818959157e909bac68982e98b1332d5e31c8",
+    "@connexta/ace": "git://github.com/connexta/ace.git#bd20be6b0fb3c8b2cdbc5a04cc8a66bf1b59861c",
     "bootstrap-sass": "3.3.6",
     "bootswatch": "3.3.7",
     "compass-mixins": "0.12.10",
@@ -42,6 +43,11 @@
   },
   "resolutions": {
     "admin-ui/@connexta/atlas/backbone.marionette": "1.8.8",
-    "@connexta/ace": "git://github.com/connexta/ace.git#248c818959157e909bac68982e98b1332d5e31c8"
+    "@connexta/ace": "git://github.com/connexta/ace.git#bd20be6b0fb3c8b2cdbc5a04cc8a66bf1b59861c"
+  },
+  "ace": {
+    "features": [
+      "packages/*"
+    ]
   }
 }
