--- a/ui/packages/admin-core-logviewer/package.json
+++ b/ui/packages/admin-core-logviewer/package.json
@@ -49,7 +49,8 @@
     "node-lessify": "0.1.4",
     "tap": "5.7.2",
     "tape": "4.5.1",
-    "@connexta/ace": "*"
+    "@types/node": "12.6.8",
+    "@connexta/ace": "git://github.com/connexta/ace.git#bd20be6b0fb3c8b2cdbc5a04cc8a66bf1b59861c"
   },
   "browserify": {
     "transform": [
