--- a/ui/packages/admin-security-certificate-ui/package.json
+++ b/ui/packages/admin-security-certificate-ui/package.json
@@ -32,7 +32,7 @@
     "wd": "0.3.12",
     "which": "1.0.5",
     "yargs": "3.23.0",
-    "@connexta/ace": "*"
+    "@connexta/ace": "git://github.com/connexta/ace.git#bd20be6b0fb3c8b2cdbc5a04cc8a66bf1b59861c"
   },
   "dependencies": {
     "express": "4.16.3",
