--- a/ui/packages/catalog-admin-module-sources/package.json
+++ b/ui/packages/catalog-admin-module-sources/package.json
@@ -24,13 +24,14 @@
     "node": ">=0.10.5"
   },
   "devDependencies": {
-    "@connexta/ace": "*"
+    "@connexta/ace": "git://github.com/connexta/ace.git#bd20be6b0fb3c8b2cdbc5a04cc8a66bf1b59861c"
   },
   "dependencies": {
     "backbone-associations": "0.6.2",
     "backbone.marionette": "1.8.8",
     "backbone.modelbinder": "1.1.0",
     "backbone-poller": "1.1.3",
+    "bootstrap": "3.4.0",
     "font-awesome": "4.7.0",
     "jquery": "3.2.1",
     "lodash": "4.17.5"
