--- a/ui/packages/registry-admin-remote-ui/package.json
+++ b/ui/packages/registry-admin-remote-ui/package.json
@@ -25,7 +25,7 @@
     "grunt-contrib-watch": "1.0.0",
     "grunt-express-server": "0.5.3",
     "load-grunt-tasks": "3.5.2",
-    "@connexta/ace": "*"
+    "@connexta/ace": "git://github.com/connexta/ace.git#bd20be6b0fb3c8b2cdbc5a04cc8a66bf1b59861c"
   },
   "dependencies": {
     "lodash": "4.17.5",
