--- a/ui/packages/resourcemanagement-usage-ui/package.json
+++ b/ui/packages/resourcemanagement-usage-ui/package.json
@@ -34,7 +34,7 @@
     "mocha": "1.20.0",
     "requirejs": "2.3.3",
     "underscore": "1.7.0",
-    "@connexta/ace": "*"
+    "@connexta/ace": "git://github.com/connexta/ace.git#bd20be6b0fb3c8b2cdbc5a04cc8a66bf1b59861c"
   },
   "dependencies": {
     "lodash": "4.17.5",
