--- a/ui/packages/ui/package.json
+++ b/ui/packages/ui/package.json
@@ -16,9 +16,11 @@
     "node": ">=0.10.5"
   },
   "devDependencies": {
+    "@types/backbone": "1.3.47",
+    "@types/node": "12.6.8",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
-    "@connexta/ace": "*"
+    "@connexta/ace": "git://github.com/connexta/ace.git#bd20be6b0fb3c8b2cdbc5a04cc8a66bf1b59861c"
   },
   "dependencies": {
     "@connexta/atlas": "0.0.35",
@@ -29,13 +31,14 @@
     "backbone.marionette": "1.8.8",
     "backbone.modelbinder": "1.1.0",
     "blueimp-file-upload": "9.25.1",
+    "bootstrap": "3.4.0",
     "font-awesome": "4.7.0",
     "iframe-resizer": "3.6.3",
     "jquery": "3.2.1",
     "jquery-ui": "1.12.1",
     "js-cookie": "2.2.0",
     "lodash": "4.17.5",
-    "logviewer-ui": "*",
+    "@connexta/logviewer-ui": "file:../admin-core-logviewer",
     "perfect-scrollbar": "1.4.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
@@ -61,6 +64,9 @@
     "target/webapp",
     "src/main/resources"
   ],
+  "resolutions": {
+    "**/backbone.marionette": "1.8.8"
+  },
   "main": "src/main/webapp/main.js",
   "context-path": "/admin"
 }
