--- a/ui/packages/admin-federation-ui/package.json
+++ b/ui/packages/admin-federation-ui/package.json
@@ -20,6 +20,9 @@
     "backbone.marionette": "2.4.7",
     "jquery": "3.2.1"
   },
+  "resolutions": {
+    "**/backbone": "1.1.2"
+  },
   "alias": {
     "marionette": "backbone.marionette"
   },
